--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   </head>
   <body>
     <div id="container">
+      <img src="images/image-qr-code.png" alt="QR code" />
       <p>Improve your front-end skills by building projects</p>
       <p>
         Scan the QR code to visit Frontend Mentor and take your coding skills to
