--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <body>
     <div id="container">
       <img src="images/image-qr-code.png" alt="QR code" />
-      <p>Improve your front-end skills by building projects</p>
-      <p>
+      <p id="p1">Improve your front-end skills by building projects</p>
+      <p id="p2">
         Scan the QR code to visit Frontend Mentor and take your coding skills to
         the next level
       </p>
