--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Kevin Sanchez</a>.
+      >. Coded by
+      <a href="https://github.com/Kevin-Sanchez03">Kevin Sanchez</a>.
     </div>
   </body>
 </html>
